Fix: menu hover on mobile

--- a/_sass/includes/_header.scss
+++ b/_sass/includes/_header.scss
@@ -2,9 +2,8 @@
 	float: left;
 	width: 100%;
 	height: 90%;
-	overflow: -webkit-paged-y;
-	background-size: 42%;
-	background-position: 108% -101px;
+	background-size: 39%;
+	background-position: 850px -101px;
 	background-repeat: no-repeat;
 
 	&_listContainer {
