--- a/_sass/page.scss
+++ b/_sass/page.scss
@@ -83,6 +83,7 @@
 		&_bottle {
 			lost-column: 2.4/12;
 			margin-top: 36px;
+			display: none;
 		}
 
 		&_subTitle {
